# pm-method-agent

./: .env.example  .gitignore  LICENSE  README.md  method-skill-design.md  pyproject.toml  setup.py
docs/: README.md  advanced-agent-runtime.md  agent-architecture.md  agent-interaction.md  agent-shell-runtime.md  approval-blocking-contract.md  architecture.md  brainstorm-integration.md  brainstorm-minimal-design.md  command-executor.md  context-profile.md  contracts.md  deployment-modes.md  evaluation-cases.md  follow-up-loop-design.md  getting-started.md  hook-enforcement.md  http-service.md  ide-skill-minimal-contract.md  implementation-roadmap.md  integration-examples.md  interaction-memory-design.md  llm-adapter.md  llm-boundary-scenarios.md  llm-runtime-boundary.md  manual-smoke.md  method-uncertainty-framework.md  operation-enforcement.md  output-style.md  partial-follow-up-checklist.md  product-v0-2.md  prompt-layering.md  real-case-testing.md  release-process.md  release-readiness.md  rule-layering.md  runtime-policy.md  session-service-design.md  stage-conclusion-checklist.md  stage-conclusion-samples.md  (+5 more)
docs/releases/: v0.1.0.md
examples/: problem-definition-case.json
schemas/: analyzer-finding.schema.json  case-state.schema.json  decision-gate.schema.json
scripts/: manual_smoke.sh  web_demo_acceptance.sh
src/pm_method_agent/: __init__.py  __main__.py  agent_shell.py  case_copywriter.py  cli.py  command_executor.py  demo_seed.py  directory_list_tool.py  follow_up.py  follow_up_copywriter.py  models.py  (+28 more)
tests/: test_human_like_flows.py  test_smoke.py
(+4 files in other folders)
